--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ install_requires =
     appdirs>=1.4.4
     czifile>=2019.5.22
     defusedxml>=0.6.0
+    fonticon-fontawesome6>=6.1.1
     h5py>=3.3.0
     imagecodecs>=2020.5.30
     imageio>=2.5.0
