--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,7 @@ max-complexity = 15
 "package/tests/**.py" = ["PLR2004"]
 "package/PartSegCore/_old_json_hooks.py" = ["PLR0912", "PLR0911"]
 "package/PartSegCore/class_generator.py" = ["PLR0912"]
-"build_utils/**.py" = ["S602"]
+"build_utils/**.py" = ["S603", "S607"]
 "package/PartSeg/common_gui/show_directory_dialog.py" = ["S603", "S606", "S607"]
 
 [tool.check-manifest]
