migrate from `nme` to `local_migrator`

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,10 +49,11 @@ install_requires =
     imagecodecs>=2020.5.30
     imageio>=2.5.0
     ipykernel>=5.2.0
+    local-migrator>=0.1.7
     magicgui!=0.5.0,>=0.4.0
     mahotas>=1.4.10
     napari>=0.4.14
-    nme>=0.1.6
+    nme>=0.1.7
     numpy>=1.18.5
     oiffile>=2020.1.18
     openpyxl>=2.5.7
