--- a/tox.ini
+++ b/tox.ini
@@ -67,6 +67,8 @@ commands =
 conda_env=environment.yml
 deps=
     pytest
+setenv =
+    CONDA_EXE = mamba
 
 [testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{414,415,416,417,repo}]
 deps =
