--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -131,6 +131,12 @@ jobs:
           name: test_data
           path: test_data
 
+      - name: Use mamba solver
+        shell: "bash -el {0}"
+        run: |
+          conda install -n base conda-libmamba-solver
+          conda config --set solver libmamba
+
       - name: Install dependencies
         shell: "bash -el {0}"
         run: mamba install -y "tox-conda>=0.10.0"
