do not use pytest-pretty in minreq tests

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,6 @@ deps =
     imageio != 2.22.1
     pydantic<2.0
     pytest-json-report
-    pytest-pretty
 
 [testenv]
 #recreate=true
@@ -59,6 +58,7 @@ passenv =
     PYVISTA_OFF_SCREEN
 deps =
     {[base]deps}
+    pytest-pretty
 extras =
     test
 
@@ -72,7 +72,7 @@ deps=
 
 [testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{414,415,416,417,repo}]
 deps =
-    {[base]deps}
+    {[testenv]deps}
     414: napari==0.4.14
     415: napari==0.4.15
     416: napari==0.4.16
