--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ extras =
     test
 
 commands =
-    python -m pytest package/tests --no-cov
+    python -m pytest package/tests --no-cov --json-report --json-report-file={toxinidir}/report-{envname}.json
 
 [testenv:py39-PySide2-conda]
 conda_env=environment.yml
