add `pytest-json-report` to conda test

--- a/tox.ini
+++ b/tox.ini
@@ -69,6 +69,7 @@ commands =
 conda_env=environment.yml
 deps=
     pytest
+    pytest-json-report
 
 [testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{414,415,416,417,repo}]
 deps =
