--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ deps =
     PySide2: npe2!=0.2.2
     imageio != 2.22.1
     pydantic<2.0
+    pytest-json-report
 
 [testenv]
 #recreate=true
@@ -57,34 +58,36 @@ passenv =
     PYVISTA_OFF_SCREEN
 deps =
     {[base]deps}
+    pytest-pretty
 extras =
     test
 
 commands =
-    python -m pytest package/tests --no-cov
+    python -m pytest package/tests --no-cov --json-report --json-report-file={toxinidir}/report-{envname}.json
 
 [testenv:py39-PySide2-conda]
 conda_env=environment.yml
 deps=
     pytest
+    pytest-json-report
 
 [testenv:py{38,39,310,311}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{414,415,416,417,repo}]
 deps =
-    {[base]deps}
+    {[testenv]deps}
     414: napari==0.4.14
     415: napari==0.4.15
     416: napari==0.4.16
     417: napari==0.4.17
     repo: git+https://github.com/napari/napari.git
 commands =
-    !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py  --no-cov
-    repo: python -m pytest --no-cov .
+    !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py  --no-cov --json-report --json-report-file={toxinidir}/report-{envname}.json
+    repo: python -m pytest --no-cov --json-report --json-report-file={toxinidir}/report-{envname}.json
 
 [testenv:py{38,39,310,311s}-PyQt5-coverage]
 deps =
     {[testenv]deps}
 commands =
-    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests
+    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests  --json-report --json-report-file={toxinidir}/report-{envname}.json
 
 [testenv:py38-PyQt5-minimal]
 min_req = 1
@@ -97,7 +100,7 @@ deps =
     {[base]deps}
     setuptools_scm[toml]>=3.4
 commands =
-    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests
+    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests --json-report --json-report-file={toxinidir}/report-{envname}.json
 
 [testenv:py{38,39,310}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
 deps =
