feat: Add distance based watersheed to flow methods (#915)
Add option to adjust frame thick for components loaded from mask
project.
Multiple minor fixes.

---------

Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -147,7 +147,7 @@ stages:
             cache_dir: $(pip_cache_dir)
 
   - stage: Builds
-    dependsOn: Tests_linux
+    dependsOn: GetTestData
     jobs:
       - job: sdist
         pool: {vmImage: 'Ubuntu-20.04'}
