add more macos test

--- a/.github/workflows/test_napari_widgets.yml
+++ b/.github/workflows/test_napari_widgets.yml
@@ -22,10 +22,11 @@ jobs:
       fail-fast: false
       matrix:
         qt_backend: ["PyQt5", "PySide2"]
+        os: ["ubuntu-20.04", "macos-11"]
     uses: ./.github/workflows/base_test_workflow.yml
     with:
       python_version: "3.10"
-      os: "ubuntu-latest"
+      os: ${{ matrix.os }}
       napari: "napari417"
       qt_backend: ${{ matrix.qt_backend }}
 
