--- a/.github/workflows/test_napari_widgets.yml
+++ b/.github/workflows/test_napari_widgets.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         qt_backend: ["PyQt5", "PySide2"]
-        os: ["ubuntu-20.04", "macos-11"]
+        os: ["ubuntu-20.04"]
     uses: ./.github/workflows/base_test_workflow.yml
     with:
       python_version: "3.10"
