feat: Add napari widgets for all group of algoritms (#958)
This PR adds widgets that allow to interact with given algorithms from
the group. This simplifies testing ad creating new workflows.


![image](https://github.com/4DNucleome/PartSeg/assets/3826210/1d200722-8f26-4124-8053-52111e44172b)

![image](https://github.com/4DNucleome/PartSeg/assets/3826210/f8f51bd1-c993-44c6-9fa7-90beab896eaa)

![image](https://github.com/4DNucleome/PartSeg/assets/3826210/628d7b1d-40d8-4947-8bbe-d10651ddc9ce)

![image](https://github.com/4DNucleome/PartSeg/assets/3826210/bfab6f9f-e3ee-4df3-a2b7-4689ba4b4d3f)

![image](https://github.com/4DNucleome/PartSeg/assets/3826210/2a03b040-cb77-4ad2-a263-0bf25b2d0384)

![image](https://github.com/4DNucleome/PartSeg/assets/3826210/6f7c06fb-5903-4b2c-aca9-60a0c2a5cc3b)

![image](https://github.com/4DNucleome/PartSeg/assets/3826210/1a081773-1c5f-4e24-9efe-5166d4c7ac2b)

--- a/.github/workflows/test_napari_widgets.yml
+++ b/.github/workflows/test_napari_widgets.yml
@@ -22,12 +22,14 @@ jobs:
       fail-fast: false
       matrix:
         qt_backend: ["PyQt5", "PySide2"]
+        os: ["ubuntu-20.04"]
     uses: ./.github/workflows/base_test_workflow.yml
     with:
       python_version: "3.10"
-      os: "ubuntu-latest"
+      os: ${{ matrix.os }}
       napari: "napari417"
       qt_backend: ${{ matrix.qt_backend }}
+      timeout: 10
 
   test-pyqt5:
     name: PyQt5 ${{ matrix.napari }}
@@ -46,3 +48,4 @@ jobs:
       os: "ubuntu-20.04"
       napari: ${{ matrix.napari }}
       qt_backend: ${{ matrix.qt_backend }}
+      timeout: 10
