initial manifest implementation

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,7 @@ install_requires =
     xlrd>=1.1.0
     xlsxwriter>=2.0.0
 python_requires = >=3.8
+include_package_data = True
 package_dir =
     =package
 tests_require =
@@ -89,14 +90,8 @@ where = package
 [options.entry_points]
 console_scripts =
     PartSeg = PartSeg.launcher_main:main
-napari.plugin =
-    PartSeg Image reader= PartSegCore.napari_plugins.load_image
-    PartSeg Image tiff writer= PartSegCore.napari_plugins.save_tiff_layer
-    PartSeg Masked Tiff reader = PartSegCore.napari_plugins.load_masked_image
-    PartSeg Analysis project reader = PartSegCore.napari_plugins.load_roi_project
-    PartSeg Mask project reader = PartSegCore.napari_plugins.load_mask_project
-    PartSeg Mask project writer = PartSegCore.napari_plugins.save_mask_roi
-    PartSeg widgets = PartSeg.plugins.napari_widgets
+napari.manifest =
+    PartSeg = PartSeg:napari.yaml
 
 [options.extras_require]
 accelerate =
@@ -132,6 +127,9 @@ test =
     pytest-qt
     pytest-timeout
     scikit-image
+
+[options.package_data]
+partsegcore = napari.yaml
 
 [tool:pytest]
 addopts = --maxfail=5 --durations=5
