--- a/tox.ini
+++ b/tox.ini
@@ -80,14 +80,14 @@ deps =
     417: napari==0.4.17
     repo: git+https://github.com/napari/napari.git
 commands =
-    !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py  --no-cov --json-report --json-report-file={toxinidir}/report-{envname}.json
-    repo: python -m pytest --no-cov --json-report --json-report-file={toxinidir}/report-{envname}.json
+    !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py  --no-cov --json-report --json-report-file={toxinidir}/report-{envname}-{platform}.json
+    repo: python -m pytest --no-cov --json-report --json-report-file={toxinidir}/report-{envname}-{platform}.json
 
 [testenv:py{38,39,310,311s}-PyQt5-coverage]
 deps =
     {[testenv]deps}
 commands =
-    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests  --json-report --json-report-file={toxinidir}/report-{envname}.json
+    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests  --json-report --json-report-file={toxinidir}/report-{envname}-{platform}.json
 
 [testenv:py38-PyQt5-minimal]
 min_req = 1
@@ -100,7 +100,7 @@ deps =
     {[base]deps}
     setuptools_scm[toml]>=3.4
 commands =
-    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests --json-report --json-report-file={toxinidir}/report-{envname}.json
+    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{platform}.json
 
 [testenv:py{38,39,310}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
 deps =
