publish json reports

--- a/.azure-pipelines/tests.yaml
+++ b/.azure-pipelines/tests.yaml
@@ -20,3 +20,7 @@ steps:
     displayName: "Run Tox"
     env:
       CODECOV_TOKEN: $(codecov_token_secret)
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathToPublish: ./report-*.json
+      artifactName: reports
