--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -139,7 +139,7 @@ jobs:
 
       - name: Install dependencies
         shell: "bash -el {0}"
-        run: mamba install -y "tox-conda>=0.10.0"
+        run: mamba install -y "tox-conda>=0.10.0" "tox>=4"
 
       - name: List environment packages
         shell: "bash -el {0}"
