--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -140,7 +140,6 @@ jobs:
       - name: Install dependencies
         shell: "bash -el {0}"
         run: |
-          mamba install -y "tox>=4"
           mamba install -y "tox-conda>=0.10.0"
 
       - name: List environment packages
@@ -161,7 +160,7 @@ jobs:
       - name: Test with tox
         uses: aganders3/headless-gui@v1
         with:
-          run: conda run -n test --no-capture-output tox -e py39-PySide2-conda -c . -vv
+          run: conda run -n test --no-capture-output tox -e py39-PySide2-conda
         timeout-minutes: 60
 
   check-package:
