--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ max-complexity = 15
 
 [tool.ruff.per-file-ignores]
 "docs/conf.py" = ["A001"]
-"package/tests/**" = ["ARG", "PLC1901", "S101"]
+"package/tests/**" = ["ARG", "PLC1901", "S101", "RUF012"]
 "package/PartSegCore/sphinx/*" = ["ARG"]
 "package/tests/**.py" = ["PLR2004"]
 "package/PartSegCore/_old_json_hooks.py" = ["PLR0912", "PLR0911"]
