change mardownlint pre-commit  to mdformat

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,11 +37,17 @@ repos:
     rev: v1.10.0
     hooks:
     -   id: rst-backticks
--   repo: https://github.com/markdownlint/markdownlint
-    rev: v0.12.0  # Use the ref you want to point at
+-   repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.16  # Use the ref you want to point at
     hooks:
-    - id: markdownlint
+    - id: mdformat
       exclude: vendored|__init__.py|examples|TEST_FAIL_TEMPLATE.md|bug_report.md|feature_request.md
+      additional_dependencies:
+          - mdformat-gfm
+          - mdformat-black
+          - mdformat-frontmatter
+          - mdformat-footnote
+          - mdformat-toc
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v1.4.1'  # Use the sha / tag you want to point at
