--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,6 +42,7 @@ repos:
     hooks:
     - id: mdformat
       exclude: TEST_FAIL_TEMPLATE.md|bug_report.md|feature_request.md
+      args: ["--number"]
       additional_dependencies:
           - mdformat-gfm
           - mdformat-black
