--- a/setup.cfg
+++ b/setup.cfg
@@ -59,7 +59,7 @@ install_requires =
     packaging>=20.0
     pandas>=1.1.0
     psygnal>=0.3.1
-    pydantic>=1.8.1
+    pydantic>=1.8.1,<2
     pygments>=2.4.0
     qtconsole>=4.7.7
     requests>=2.18.0
