--- a/.github/workflows/base_test_workflow.yml
+++ b/.github/workflows/base_test_workflow.yml
@@ -97,12 +97,20 @@ jobs:
             ./report-*.json
           retention-days: 7
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload coverage report ${{ inputs.tox_args }}
+        uses: actions/upload-artifact@v3
         if: ${{ inputs.coverage }}
         with:
           name: coverage_report ${{ inputs.tox_args }}
           path: |
             ./htmlcov
+          retention-days: 7
+
+      - name: Upload coverage raw data
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage_raw ${{ inputs.tox_args }}
+          path: ./coverage.xml
           retention-days: 7
 
       - uses: codecov/codecov-action@v3
