--- a/setup.cfg
+++ b/setup.cfg
@@ -79,7 +79,6 @@ package_dir =
     =package
 tests_require =
     pytest
-    pytest-cov
     pytest-qt
     lxml
 
@@ -120,9 +119,9 @@ pyside2 =
 pyside6 =
     PySide6
 test =
+    coverage
     lxml
     pytest>=7.0.0
-    pytest-cov
     pytest-qt
     pytest-timeout
     scikit-image
@@ -166,7 +165,10 @@ source =
     PartSeg
     PartSegCore
     PartSegImage
-omit = .tox/*
+omit =
+    .tox/*
+    package/PartSeg/changelog.py
+    package/ParsSeg/version.py
 parallel = True
 
 [coverage:report]
