--- a/tox.ini
+++ b/tox.ini
@@ -83,11 +83,11 @@ commands =
     !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py  --no-cov --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
     repo: python -m pytest --no-cov --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
-[testenv:py{38,39,310,311s}-PyQt5-coverage]
+[testenv:py{38,39,310,311}-PyQt5-coverage]
 deps =
     {[testenv]deps}
 commands =
-    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests  --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
 [testenv:py38-PyQt5-minimal]
 min_req = 1
