--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ extras =
     test
 
 commands =
-    python -m pytest package/tests --no-cov --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    python -m pytest package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
 [testenv:py39-PySide2-conda]
 conda_env=environment.yml
@@ -80,8 +80,8 @@ deps =
     417: napari==0.4.17
     repo: git+https://github.com/napari/napari.git
 commands =
-    !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py  --no-cov --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
-    repo: python -m pytest --no-cov --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    repo: python -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
 [testenv:py{38,39,310,311}-PyQt5-coverage]
 deps =
