--- a/tox.ini
+++ b/tox.ini
@@ -100,7 +100,7 @@ deps =
     {[base]deps}
     setuptools_scm[toml]>=3.4
 commands =
-    python -m pytest --cov-report=xml --cov-report html --cov-append --cov {envsitepackagesdir}/PartSeg --cov {envsitepackagesdir}/PartSegCore --cov {envsitepackagesdir}/PartSegImage --cov package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    coverage run -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
 [testenv:py{38,39,310}-{PyQt5, PySide2,PyQt6,PySide6}-azure]
 deps =
