change ommit to handle installing in site-packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -167,8 +167,8 @@ source =
     PartSegImage
 omit =
     .tox/*
-    package/PartSeg/changelog.py
-    package/ParsSeg/version.py
+    PartSeg/changelog.py
+    ParsSeg/version.py
 parallel = True
 
 [coverage:report]
