use double * expression

--- a/setup.cfg
+++ b/setup.cfg
@@ -167,8 +167,8 @@ source =
     PartSegImage
 omit =
     .tox/*
-    PartSeg/changelog.py
-    ParsSeg/version.py
+    **/changelog.py
+    **/version.py
 parallel = True
 
 [coverage:report]
